# DataFrame

./: .clang-format  .gitignore  .roborev.toml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DataFrame.pc.in  DataFrameDoc.docx  Html  License  README.md  appveyor.yml  build_all.sh  conanfile.py  package.json
.github/: FUNDING.yml
.github/workflows/: ci-build.yml  codacy.yml  codeql-analysis.yml  macos-build.yml  msvc.yml  ubuntu-22-04-build.yml  ubuntu-build.yml  windows-build.yml
DMScu/: CMakeLists.txt
DMScu/cmake/: DMScu-config.cmake.in
DMScu/include/: DMScu_Exception.h  DMScu_FileBase.h  DMScu_FileDef.h  DMScu_FixedSizeString.h  DMScu_MMapBase.h  DMScu_MMapFile.h
DMScu/src/: CommonMakefile.mk  DMScu_FileBase.cc  DMScu_MMapBase.cc  DMScu_MMapFile.cc  Makefile.Linux.GCC64  Makefile.Linux.GCC64D  filebase_tester.cc  fixsizestr_tester.cc  mmfile_tester.cc
DataFrame/: CMakeLists.txt
DataFrame/include/DataFrame/: DataFrame.h  DataFrameOperators.h  DataFrameVisitors.h  DataFrame_functors.h  DataFrame_get.tcc  DataFrame_lib_exports.h  DataFrame_opt.tcc  DateTime.h  FixedSizeString.h  HeteroVector.h  HeteroVector.tcc  HeteroView.h  ThreadGranularity.h  VectorView.h
DataFrame/include/DataFrame/dllexports/: DataFrame_lib_exports.h
DataFrame/include/DataFrame/dllexports/shared/: DataFrame_lib_exports.h
DataFrame/include/DataFrame/dllexports/static/: DataFrame_lib_exports.h
DataFrame/src/: CommonMakefile.mk  DateTime.cc  HeteroVector.cc  HeteroView.cc  Makefile.Linux.GCC64D  ThreadGranularity.cc
benchmarks/: CMakeLists.txt  dataframe_performance.cc  dataframe_performance_2.cc  dataframe_read_large_file.cc  linkedin_benchmark.cc  linkedin_benchmark.py  pandas_performance.py  pandas_performance_2.py  pandas_read_large_file.py  polars_performance.py  polars_read_large_file.py
cmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  DataFrame.pc.in  DataFrameConfig.cmake.in  Dataframe-config.cmake.in  HmdfTargetDataFiles.cmake  InstallBasicPackageFiles.cmake  dataframe_target_data_files.cmake
data/: AAPL_10dBucketWithMaps.csv  AAPL_10dBucketWithMaps_small.csv  AAPL_10dBucketWithVector.csv  DT_AAPL.csv  DT_Intraday.csv  DT_sample.csv  FORD.csv  IcecreamProduction.csv  SchemaWithHeader.csv  SchemaWithoutHeader.csv  client_data.csv  csv2_format_data.csv  csv2_format_data_with_bars.csv  sample_data.csv  sample_data.json  sample_data_2.csv  sample_data_2.json  sample_data_dt_index.csv  sample_data_no_index.csv  sample_data_no_index.json  sample_data_string_index.csv  strings.csv  strings2.csv
docs/: .clang-format  C++-DataFrame-User-Guide.md  CONTRIBUTING.md  CheatSheet.pptx  DataFrameDoc.docx  DataFrameDoc.html  DateTimeDoc.docx  Documentation.txt  decompose.py  lowess.py
docs/HTML/: ARIMAVisitor.html  AbsVisitor.html  AccumDistVisitor.html  AffinityPropVisitor.html  AndersonDarlingTestVisitor.html  AnomalyDetectByFFTVisitor.html  AnomalyDetectByIQRVisitor.html  AnomalyDetectByIsoForestVisitor.html  AnomalyDetectByKNNVisitor.html  AnomalyDetectByLOFVisitor.html  AnomalyDetectByZScoreVisitor.html  ArnaudLegouxMAVisitor.html  AutoCorrVisitor.html  AvgDirMovIdxVisitor.html  BIRCHVisitor.html  BalanceOfPowerVisitor.html  BetaVisitor.html  BiasVisitor.html  BollingerBand.html  BoxCoxVisitor.html  CCIVisitor.html  CFTree.html  CalinskiHarabaszVisitor.html  CategoryVisitor.html  CenterOfGravityVisitor.html  ChaikinMoneyFlowVisitor.html  ChandeKrollStopVisitor.html  ChiSquaredTestVisitor.html  ChopIndexVisitor.html  ClipVisitor.html  CoeffVariationVisitor.html  ConfIntervalVisitor.html  CoppockCurveVisitor.html  CorrVisitor.html  CountVisitor.html  CovVisitor.html  CramerVonMisesTestVisitor.html  CumMaxVisitor.html  CumMinVisitor.html  CumProdVisitor.html  (+318 more)
examples/: CMakeLists.txt  hello_world.cc
include/: BaseContainer.h  BaseContainer.tcc  DFVisitors.h  DataFrame.h  DataFrame.tcc  DataFrameOperators.h  DataFrameVisitors.h  DataFrame_functors.h  DataFrame_get.tcc  DataFrame_join.tcc  DataFrame_merge.tcc  DataFrame_misc.tcc  DataFrame_opt.tcc  DataFrame_read.tcc  DataFrame_set.tcc  DataFrame_shift.tcc  DateTime.h  FixedSizeString.h  FrameOperators.h  HeteroVector.h  HeteroVector.tcc  HeteroView.h  HeteroView.tcc  ThreadGranularity.h  VectorPtrView.h  VectorPtrView.tcc  VectorView.h
include/DataFrame/: DataFrame.h  DataFrame.tcc  DataFrameExports.h  DataFrameFinancialVisitors.h  DataFrameMLVisitors.h  DataFrameOperators.h  DataFrameStatsVisitors.h  DataFrameTransformVisitors.h  DataFrameTypes.h  DataFrameVisitors.h  DataFrameVisitors2.h  DataFrame_functors.h  DataFrame_get.tcc  DateTime.h  (+16 more)
src/: BaseContainer.cc  CommonMakefile.mk  DataFrame.cc  DateTime.cc  FileBase.cc  HeteroPtrView.cc  HeteroVector.cc  HeteroView.cc  MMapBase.cc  MMapFile.cc  MMapSharedMem.cc  Makefile.Linux.GCC64  Makefile.Linux.GCC64D  ThreadGranularity.cc  build_all.sh  dataframe_tester.cc  dataframe_tester_output.txt  datasci_tester.cc  date_time_tester.cc  date_time_tester_output.txt  futures.txt  ptrvec_tester.cc  sample_data.csv  test_output.txt  vector_ptr_view_tester.cc  vectors_tester.cc  vectors_tester_output.txt
test/: CMakeLists.txt  DT_IBM.csv  FORD.csv  aligned_dataframe_tester.cc  aligned_dataframe_tester_2.cc  allocator_tester.cc  csv2_format_data.csv  csv2_format_data_2.csv  csv2_format_data_no_index.csv  dataframe_performance.cc  dataframe_performance_2.cc  dataframe_tester.cc  dataframe_tester_2.cc  dataframe_tester_3.cc  dataframe_tester_4.cc  dataframe_tester_5.cc  dataframe_tester_output.txt  dataframe_tester_schema.cc  dataframe_thread_safety.cc  date_time_tester.cc  date_time_tester_output.txt  file_obj_tester.cc  filebase_tester.cc  gen_rand_tester.cc  hello_world.cc  iso_tree_tester.cc  kdtree_tester.cc  matrix_tester.cc  meta_prog_tester.cc  mmfile_tester.cc  mmfile_tester_output.txt  ob_erase_tester.cc  obj_base_tester.cc  obj_vector_erase_tester.cc  obj_vector_erase_tester_output.txt  obj_vector_tester.cc  obj_vector_tester_output.txt  pandas_performance.py  pandas_performance_2.py  sample_data.csv  (+8 more)
test/data/: IBM.csv  SHORT_IBM.csv  sample_data_no_index.csv
(+90 files in other folders)
